# wetppr

./: .bumpversion.cfg  .gitignore  404.html  API.rst  README.md  README.rst  db.json  index.html  micc3.cfg  mkdocs.yml  pyproject.toml  requirements.txt  wip-cookiecutter.json
about-the-author/: index.html
assignment/: index.html
assignment-2022-23/: index.html
assignment-2023-24/: index.html
assignment-ideas/: index.html
chapter-1/: index.html
chapter-2/: index.html
chapter-3/: index.html
chapter-4/: index.html
chapter-5/: index.html
chapter-6/: index.html
course-text/: index.html
docs/: Makefile  aanwijzigingen.md  about-the-author.md  assignment-2022-23.md  assignment-2023-24.md  assignment-ideas.md  chapter-1.md  chapter-2.md  chapter-3.md  chapter-4.md  chapter-5.md  chapter-6.md  conf.py  course-text.md  evaluation.md  exercice-1.md  exercices.md  exercise-1-solution.md  exercise-1.md  exercise-2-solution.md  exercise-2.md  exercise-3.md  exercises.md  glossary.md  guide-lines.md  hoofdstuk-1.md  index.md  index.rst  inleiding.md  installation.rst  introductie.md  introduction.md  lecture-1.md  links.md  make-glossary.py  more-links.md  over-de-auteur.md  overview.md  programming-quotes.md  vsc-infrastructure.md
documentation/: links.md
evaluation/: index.html
exercise-1/: index.html
exercise-1-solution/: index.html
exercise-2/: index.html
exercise-2-solution/: index.html
exercise-3/: index.html
exercises/: index.html
glossary/: index.html
guide-lines/: index.html
inspiration/: links.md
introductie/: index.html
introduction/: index.html
lecture-1/: index.html
links/: index.html
scripts/vaughan/hello-mpi-omp/: CMakeLists.txt  hello-mpi-omp.c  hello-mpi-omp.slurm  sort.py
(+43 files in other folders)
