[tool.poetry]
name = "wetppr"
version = "0.0.0"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Bert Tijskens <engelbert.tijskens@uantwerpen.be>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/etijskens/wetppr"
homepage = "https://etijskens.github.io/wetppr"

keywords = []

[tool.poetry.dependencies]
python = "^3.8"
wiptools = "^1.3.0"

[tool.poetry.dev.dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
