[tool.poetry]
name = "wetppr"
version = "23.0.0"
description = "Material for the course WERPPR2000 - Parallel Programming"
authors = ["Bert Tijskens <engelbert.tijskens@uantwerpen.be>"]
license = "MIT"

readme = 'README.md'

repository = "https://github.com/etijskens/wetppr"
homepage = "https://etijskens.github.io/wetppr"

keywords = []

[tool.poetry.dependencies]
python = "^3.9"
wiptools = "^1.3.0"

[tool.poetry.dev.dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
